--- a/css/theme.css
+++ b/css/theme.css
@@ -1694,3 +1694,12 @@ footer {
     src: local('Libre Baskerville Italic'), local('LibreBaskerville-Italic'), url(http://fonts.gstatic.com/s/librebaskerville/v4/QHIOz1iKF3bIEzRdDFaf5fbsUggLxuOzHNuXcSFlTaY.woff2) format('woff2');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
+
+.maps-overlay {
+    background: transparent;
+    position: relative;
+    width: 100%;
+    height: 480px; /* your iframe height */
+    top: 480px; /* your iframe height */
+    margin-top: -480px; /* your iframe height */
+}
