--- a/css/theme.css
+++ b/css/theme.css
@@ -1705,7 +1705,20 @@ footer {
 }
 
 section.story-4 {
-    padding: 80px 0;
+    padding-bottom: 80px;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-top: 0px;
+    background: #fff;
+    overflow: hidden;
+    position: relative;
+}
+
+section.short-story {
+    padding-bottom: 40px;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-top: 40px;
     background: #fff;
     overflow: hidden;
     position: relative;
