fix gallery and reduce font in mobile

--- a/css/theme.css
+++ b/css/theme.css
@@ -776,7 +776,7 @@ nav.light.scrolled .line-3 {
 
 @media all and (max-width: 767px) {
     .header h1 {
-        font-size: 80px;
+        font-size: 60px;
         line-height: 88px;
     }
 }
@@ -1613,7 +1613,7 @@ section.short-story {
 }
 
 .image-slider img {
-    height: 500px;
+    height: auto;
 }
 
 .details-1 {
